fix gap footer

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -333,6 +333,9 @@ body {
     &__container {
       padding: 0 16px;
     }
+    &__platforms {
+      gap: 16px;
+    }
   }
   .swiper {
     .swiper-button-prev,
